<resources>
    <string name="app_name">DragAndQuery</string>
    <string name="splash_title">Drag and Query</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Drag And Query</string>
    <string name="nav_header_subtitle">Im Auftrag der JGU</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_free">Freier Modus</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_practice">Übungen</string>
    <string name="menu_dbView">Datenbank</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_impressum">Impressum</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="others">Sonstiges</string>
    <string name="welcome">Ändere dein Profilbild</string>
    <string name="global_reset">Tutorial und Übungen zurücksetzen</string>
    <string name="start_btn_go">Go!</string>
    <string name="loginName_hint">Name</string>
    <string name="loginMail_hint">Mail</string>
    <string name="save">Speichern</string>
    <string name="prac_easy">Leicht</string>
    <string name="prac_medium">Mittel</string>
    <string name="prac_hard">Schwer</string>
    <string name="title_activity_practice">Schwierigkeitsgrad</string>
    <string name="title_activity_practices">Übungen</string>
    <string name="title_prac_easy">Leichte Übungen</string>
    <string name="title_prac_medium">Mittelschwere Übungen</string>
    <string name="title_prac_hard">Schwere Übungen</string>
    <string name="ex_title">Aufgabe</string>
    <string name="ex_easy_1">Übung 1</string>
    <string name="ex_easy_1_text">Für die Mitarbeiter im Büro soll eine Kontaktliste erstellt werden. \n\n
        Lasse dir dafür den Firmennamen, die Kontaktperson und die Telefonnummer der Lieferanten ausgeben</string>
    <string name="ex_easy_2">Übung 2</string>
    <string name="ex_easy_2_text">In der Cafeteria gibt es auch vegetarische und vegane Hauptgerichte.
        Diese gehören zur Kategorie Nummer 5.\n\n
        Lasse dir 15 dieser Gerichte ausgeben.</string>
    <string name="ex_easy_3">Übung 3</string>
    <string name="ex_easy_3_text">Wie viele Hauptgerichte (Kategorien 3, 4 und 5) gibt es insgesamt in der Cafeteria? </string>
    <string name="ex_easy_4">Übung 4</string>
    <string name="ex_easy_4_text">Welche Angestellten wohnen in Wiesbaden? \n\n
        Lasse dir die Vor-und Nachnamen ausgeben.</string>
    <string name="ex_easy_5">Übung 5</string>
    <string name="ex_easy_5_text">Wie viele Artikel enthält jede Bestellung im Durchschnitt? </string>
    <string name="ex_easy_6">Übung 6</string>
    <string name="ex_easy_6_text">Wie viele Kunden hat die Cafeteria?</string>
    <string name="ex_easy_7">Übung 7</string>
    <string name="ex_easy_7_text">Gesunde Ernährung ist wichtig, deshalb gibt es nicht nur Hauptgerichte, sondern auch Beilagen und Salate.
        Aber natürlich darf an einem anstrengenden Schultag auch ein leckerer Nachtisch nicht fehlen.\n\n
        Lasse dir die Namen und Beschreibungen der Kategorien ausgeben, die keine Hauptgerichte (3, 4, 5) sind. </string>
    <string name="ex_easy_8">Übung 8</string>
    <string name="ex_easy_8_text">Die Chefköchin erstellt den Speiseplan für die kommende Woche.
        Sie muss dazu wissen, wieviel Kartoffelsalat(ArtikelNr 117) und wieviel Nudelsalat (ArtikelNr 119) noch im Lager ist,
        da es einen Grilltag geben soll. \n\n
        Lasse dir also neben den Artikelnummern den Lagerbestand für die beiden Artikel, sowie die LieferantenNr und die Liefereinheit ausgeben. </string>
    <string name="ex_easy_9">Übung 9</string>
    <string name="ex_easy_9_text">Frau Blum vom Kartoffelhof hat angekündigt, dass sich die nächste Lieferung verspäten wird.
        Um den Speiseplan entsprechend anzupassen, wird eine Liste aller Artikel mit Name, Nummer und Lagerbestand benötigt,
        welche vom Kartoffelhof (LiefernatenNr 1) kommen. \n\n
        Gib diese aus.</string>
    <string name="ex_easy_10">Übung 10</string>
    <string name="ex_easy_10_text">Die neue Bürokraft will einen Geburtstagskalender für das Personal erstellen.
        Sie benötigt dafür eine Liste mit Vor-und Zunamen aller Angestellten, sowie deren Geburtstag. \n\n
        Gib diese aus.</string>
    <string name="ex_medium_1">Übung 1</string>
    <string name="ex_medium_1_text">Wie viele Bestellungen haben mehr als 4€ gekostet?</string>
    <string name="ex_medium_2">Übung 2</string>
    <string name="ex_medium_2_text">Lasse dir die Nach-und Vornamen aller Angestellten aus Mainz in
        alphabetischer Reihenfolge absteigend nach dem Nachnamen sortiert anzeigen. </string>
    <string name="ex_medium_3">Übung 3</string>
    <string name="ex_medium_3_text">Was hat die teuerste Bestellung gekostet und welche war es (Bestellnr)?</string>
    <string name="ex_medium_4">Übung 4</string>
    <string name="ex_medium_4_text">Was ist wohl beliebter: Spaghetti Bolognese (ArtikelNr 62) oder
        Spaghetti mit Gemüsebolognese (ArtikelNr88)? \n\n
        Lasse dir ausgeben, wieviele Bestellungen mit Bolognese und wieviele mit Gemüsebolognese es gab.</string>
    <string name="ex_medium_5">Übung 5</string>
    <string name="ex_medium_5_text">Das Team für Qualitätsmanagement will das Speisenangebot der Cafeteria überprüfen.
        Dazu benötigen sie unter anderem eine Liste der verschiedenen Speisekategorien, sowie die Information,
        wie groß das Angebot in jeder Kategorie ist. \n\n
        Lasse dir also zu jeder Kategorie den Kategorienamen und die Anzahl Artikel der Kategorie anzeigen</string>
    <string name="ex_medium_6">Übung 6</string>
    <string name="ex_medium_6_text">Lilli will sich von ihrem Mensageld heute Nachmittag noch ein Eis gönnen.
        Deshalb möchte sie heute Mittag möglichst günstig essen. \n\n
        Finde für sie heraus, bei welchen Kategorien der Durchschnittspreis der Artikel günstiger als 1€ ist.\n\n
        <i>(Tipp: Group by und having verwenden)</i></string>
    <string name="ex_medium_7">Übung 7</string>
    <string name="ex_medium_7_text">Es muss festgestellt werden, wie abhängig die Cafeteria von einzelnen Lieferanten ist.
        Finde dazu heraus, von welchen Lieferanten mehr als 1500 Artikel im Lager vorrätig sind. \n\n
        Gib dazu sowohl die Summe der Lagerbestände als auch die jeweilige Lieferantennummer aus.\n\n
        </string>
    <string name="ex_medium_8">Übung 8</string>
    <string name="ex_medium_8_text">Um herauszufinden, wie viele Angestellte nicht im Büro arbeiten, muss man die
        Personalnummern, die schon einmal eine Bestellung bearbeitet haben, zählen.\n\n
        Kannst du das? </string>
    <string name="ex_medium_9">Übung 9</string>
    <string name="ex_medium_9_text">Die Leitung der Cafeteria will versuchen einen Sonderrabatt mit der Metro (LieferantenNr2) auszuhandeln. \n\n
        Dazu möchte sie wissen, wie viele Artikel der Metro im Schnitt in jeder Bestellung sind. </string>
    <string name="ex_hard_1">Übung 1</string>
    <string name="ex_hard_1_text">Die Leitung der Cafeteria überlegt diese freitags zu schließen. Vorher soll eine Übersicht generiert werden, in der die Anzahl Bestellungen pro Tag im Februar 2018 abgebildet sind.\n\n
        <i>Tipp: Arbeite mit dem LIKE-Baustein, um alle Tage aus dem Februar 2018 selektieren zu können.</i></string>
    <string name="ex_hard_2">Übung 2</string>
    <string name="ex_hard_2_text">Die Cafeteria will Fahrgemeinschaften unter den Angestellten fördern.
        Es wird davon ausgegangen, dass nur Personal zusammenfährt, dass im selben Postleitzahlbereich wohnt. \n\n
        Wie viele Leute würden aus welchem Postleitzahlbereich zusammenfahren?</string>
    <string name="ex_hard_3">Übung 3</string>
    <string name="ex_hard_3_text">Peters Mutter glaubt ihm nicht, dass er mehr Geld für die Cafeteria braucht.
        Sie weiß seine KontoID (17) und fragt nun in der Mensa nach, für wieviel Geld er bisher gegessen hat. \n\n
        Findest du es heraus? .</string>
    <string name="ex_hard_4">Übung 4</string>
    <string name="ex_hard_4_text">Frau Schmid (PersonalNr 5) beschwert sich darüber, dass in jeder Bestellung,
        die sie bearbeitet Fleisch enthalten ist, obwohl sie streng vegan lebt. \n\n
        Wie viele Bestellungen mit Fleisch hat Frau Müller bearbeitet?</string>
    <string name="ex_hard_5">Übung 5</string>
    <string name="ex_hard_5_text">Der Elternbeirat will eine Gemüsepflicht für die Mahlzeiten in der Cafeteria fordern.
        So soll jede Bestellung mindestens eine Gemüsebeilage (KategorieNr 2) enthalten.
        Die Schulleitung ist dagegen und möchte nun wissen, wie viele Bestellungen <b>ohne</b> Gemüsebeilage es gab. \n\n
        <i>(Denk an den Distinct-Operator.)</i></string>
    <string name="ex_hard_6">Übung 6</string>
    <string name="ex_hard_6_text">Die Leitung der Cafeteria möchte wissen, wie viele Bestellungen jeder Nutzer getätigt hat. \n\n
        Gib dazu die KontoID und die Anzahl Bestellungen aus.</string>
    <string name="ex_hard_7">Übung 7</string>
    <string name="ex_hard_7_text">Das Team für Qualitätsmanagement will auch die Portionsgröße prüfen. Hierzu soll gezählt werden, bei wie vielen Bestellungen eine Gemüse-oder Sättigungsbeilage mehrfach gekauft wurde (KategorieNr 1, 2).</string>
    <string name="ex_hard_8">Übung 8</string>
    <string name="ex_hard_8_text">Die Personalleitung möchte wissen, welche Personen als Mitarbeiter*in
        des Monats Februar 2018 in Frage kommt. Es sollen alle Mitarbeiter*innen gefunden werden, die mehr als 5
        Bestellungen im Februar bearbeitet haben. \n\n
        Der Personalleitung reichen die jeweiligen PersonalIDs.</string>
    <string name="feedback_back">Zurück</string>
    <string name="feedback_forth">Weiter</string>
    <string name="accept_input">Verstanden!</string>
    <string name="head_tutorial">Tutorial</string>
    <string name="tutorial_category1">Relationale Datanbanken</string>
    <string name="tutorial_category2">Bedingungen</string>
    <string name="tutorial_category3">Aggregatfunktionen</string>
    <string name="tutorial_category4">Join</string>
    <string name="title_activity_tutorial_category">Tutorial Category</string>
    <string name="c1l1_input">
        Willkommen im Tutorial von Drag &amp; Query. \n\n
        Du lernst in diesem Tutorial die Funktionsweise von relationalen Datenbanken kennen.
        Dein bester Freund in diesem Tutorial ist Barry der Flamingo. Wenn du mal eine Frage nicht beantworten kannst,
        dann klicke auf Barry, um dir erneut den Informationstext anzusehen. \n\n
        Nun tippe unten auf "Verstanden", um zu deiner ersten Frage in diesem Tutorial zu gelangen.
    </string>
    <string name="c1l1_question"> Tippe auf die richtige Aussage und dann auf GO!</string>
    <string name="c1l1_answer1">Der Flamingo heißt Bert.</string>
    <string name="c1l1_answer2">Der Flamingo heißt Berry.</string>
    <string name="c1l1_answer3">Der Flamingo heißt Barry.</string>
    <string name="c1l9_question"> Klasse (<u>KlassenID</u>, Klassenlehrer, Klassensprecher, Klassenraum)\n\n
        Schüler (<u>SchülerID</u>, Vorname, Nachname, Straße, Hausnummer, PLZ, Ort, Geburtsdatum, KlassenID)\n\n
        Vor welches Attribut gehört der ↑, da es ein Fremdschlüssel ist?</string>
    <string name="c1l9_answer1">SchülerID</string>
    <string name="c1l9_answer2">Nachname</string>
    <string name="c1l9_answer3">KlassenID</string>
    <string name="block_cat1">Key</string>
    <string name="block_cat2">DB</string>
    <string name="block_cat3">Logik</string>
    <string name="block_cat4">Agg</string>
</resources>