<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_free"
            android:icon="@drawable/ic_menu_free"
            android:title="@string/menu_free" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_tutorial"
            android:title="@string/menu_tutorial" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/ic_menu_practice"
            android:title="@string/menu_practice" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_impressum"
                android:icon="@drawable/ic_menu_impressum"
                android:title="@string/menu_impressum" />
        </menu>
    </item>

</menu>
